Bastantes cambios y fixes

--- a/frontend/src/app/components/project-list/project-list.component.html
+++ b/frontend/src/app/components/project-list/project-list.component.html
@@ -17,6 +17,7 @@
                         <i class="fab fa-github"></i> Ver Código
                     </a>
                 </div>
+                <app-game-rating [gameId]="project.title" [gameTitle]="project.title"></app-game-rating>
             </div>
         </div>
     </div>
